@startuml

title __TREES's Class Diagram__\n

  namespace Trees {
    class Trees.Demo {
        {static} ~ CANVAS_SIZE : int
        {static} ~ TREES_TO_DRAW : int
        {static} ~ TREE_TYPES : int
        {static} + main()
        {static} - random()
    }
  }
  

  namespace Trees {
    class Trees.Forest {
        - trees : List<Tree>
        + paint()
        + plantTree()
    }
  }
  

  namespace Trees {
    class Trees.Tree {
        - x : int
        - y : int
        + Tree()
        + draw()
    }
  }
  

  namespace Trees {
    class Trees.TreeFactory {
        {static} ~ treeTypes : Map<String, TreeType>
        {static} + getTreeType()
    }
  }
  

  namespace Trees {
    class Trees.TreeType {
        - color : Color
        - name : String
        - otherTreeData : String
        + TreeType()
        + draw()
    }
  }
  

  Trees.Forest -up-|> javax.swing.JFrame
  Trees.Tree o-- Trees.TreeType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
